--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,4 +1,5 @@
-<%= form_for(@recipe) do |f| %>
+
+<% form_for @recipe, :html => { :multipart => true } do |f| %>
   <% if @recipe.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
@@ -35,6 +36,10 @@
     <%= f.label :autor %><br />
     <%= f.text_field :autor %>
   </div>
+<div class="field">
+    <%= f.file_field :photo %>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
