--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -27,7 +27,12 @@
   </tr>
 <% end %>
 </table>
-
+<%= form_tag recipes_path, :method => :get, :remote => true do %>
+  <p>
+    <%= text_field_tag :search, params[:search] %>
+    <%= submit_tag "Search", :name => nil %>
+  </p>
+<% end %>
 <br />
 
 <%= link_to 'New Recipe', new_recipe_path %>
