--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -36,6 +36,7 @@
     <%= f.label :autor %><br />
     <%= f.text_field :autor %>
   </div>
+<div class="field"><%= f.label :tag_list %>: <%= f.text_field :tag_list, :size => 60 %></div>
 <div class="field">
     <%= f.file_field :photo %>
   </div>
