--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,3 +1,15 @@
+<style type="text/css">
+#tag-cloud { position:relative; top:10px; left:10px; height:300px; width:400px; border:1px solid red; overflow:hidden; margin-bottom:40px;}
+</style>
+<script type="text/javascript" src="/javascripts/jquery.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.tagcloud.min.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.easing.1.3.js"></script>
+<script type="text/javascript">
+$(function(){
+	$("#tag-cloud").tagCloud({"direction":"vertical", "easein":"easeOutBack", "speed":2000});
+});
+</script>
+
 <h1>Listing recipes</h1>
 
 <table>
@@ -8,7 +20,7 @@
     <th>Cena</th>
     <th>Trudnosc</th>
     <th>Autor</th>
-    <th></th>
+    <th>Tagi</th>
     <th></th>
     <th></th>
   </tr>
@@ -21,9 +33,11 @@
     <td><%= recipe.cena %></td>
     <td><%= recipe.trudnosc %></td>
     <td><%= recipe.autor %></td>
+    <td><%= recipe.tag_list %></td>
     <td><%= link_to 'Show', recipe %></td>
     <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-    <td><%= link_to 'Destroy', recipe, :confirm => 'Are you sure?', :method => :delete %></td>
+    <td><%= button_to 'Destroy', recipe, :confirm => 'Are you sure?', :method => :delete %></td>
+    
   </tr>
 <% end %>
 </table>
@@ -34,5 +48,9 @@
   </p>
 <% end %>
 <br />
-
+<ul id="tag-cloud">
+<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+  <%= link_to tag.name, tags_recipes_path(:name=>tag.name), :class => css_class %>
+<% end %>
+</ul>
 <%= link_to 'New Recipe', new_recipe_path %>
