--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -17,29 +17,37 @@
     <%= f.text_field :nazwa %>
   </div>
   <div class="field">
-    <%= f.label :przepis %><br />
-    <%= f.text_area :przepis %>
+    <%= f.label :autor %><br />
+    <%= f.text_field :autor %>
+  </div>
+  <div class="field">
+    <%= f.label :cena %><br />
+    <%= f.text_field :cena %>
+  </div>
+   <div class="field">
+    <%= f.label :trudnosc %><br />
+    <%= f.text_field :trudnosc %>
   </div>
   <div class="field">
     <%= f.label :skladniki %><br />
     <%= f.text_field :skladniki %>
   </div>
   <div class="field">
-    <%= f.label :cena %><br />
-    <%= f.text_field :cena %>
+    <%= f.label :przepis %><br />
+    <%= f.text_area :przepis %>
   </div>
   <div class="field">
-    <%= f.label :trudnosc %><br />
-    <%= f.text_field :trudnosc %>
+   <%= f.label :Tagi %><br />
+   <%= f.text_field :tag_list %>
   </div>
   <div class="field">
-    <%= f.label :autor %><br />
-    <%= f.text_field :autor %>
+   <%= f.label :Dodaj zdjêcie %><br />
+   <%= f.file_field :photo %>
   </div>
-<div class="field"><%= f.label :tag_list %>: <%= f.text_field :tag_list, :size => 60 %></div>
-<div class="field">
-    <%= f.file_field :photo %>
-  </div>
+  
+  
+
+  
 
   <div class="actions">
     <%= f.submit %>
