--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,23 +1,24 @@
-<style type="text/css">
-#tag-cloud { position:relative; top:10px; left:10px; height:300px; width:400px; border:1px solid red; overflow:hidden; margin-bottom:40px;}
-</style>
-<script type="text/javascript" src="/javascripts/jquery.js"></script>
-<script type="text/javascript" src="/javascripts/jquery.tagcloud.min.js"></script>
-<script type="text/javascript" src="/javascripts/jquery.easing.1.3.js"></script>
-<script type="text/javascript">
-$(function(){
-	$("#tag-cloud").tagCloud({"direction":"vertical", "easein":"easeOutBack", "speed":2000});
-});
-</script>
-
-<h1>Listing recipes</h1>
-
-<table>
+<div id="container">
+<div id="topPan">
+	<a href="index.html"><img src="images/logo.gif" title="Liqidity Graph" alt="Liqidity Graph" width="260" height="56" border="0" class="logo" /></a>
+	<ul>
+		<li><%= link_to "Katalog", recipes_path %></li>
+		<li><%= link_to 'Dodaj', new_recipe_path %></li>
+		<li><%= link_to_rpx "Zaloguj sie", user_session_url %> </li>
+	</ul>
+</div>
+<div id="bodyPan">
+	<div id="bodytopPan">
+		<h2>Informacje o git-nalewki</h2>
+		<p>Serwis realizowany w ramach projektu z Architektury Serwisów Internetowych</p>
+		<p>Git-nalewki umożliwia dzielenie się przepisami na wyszukane i wykwintne trunki zwane nalewkami, komentowanie i ocenianie przepisów innych użytkowników</p>
+Naszą aplikacja przeznaczona jest dla miłośników oraz degustatorów, którzy lubią mieć w swoim barku coś czego nie można dostać w sklepie i czym będą mogli poczęstować gości w czasie spotkań rodzinnych i towarzyskich</p>
+	</div>
+		<div id="bodymiddleMainPan">
+		<h2>Dodane Przepisy</h2>
+  	<table style="margin:0 auto;">
   <tr>
     <th>Nazwa</th>
-    <th>Przepis</th>
-    <th>Skladniki</th>
-    <th>Cena</th>
     <th>Trudnosc</th>
     <th>Autor</th>
     <th>Tagi</th>
@@ -28,9 +29,6 @@ $(function(){
 <% @recipes.each do |recipe| %>
   <tr>
     <td><%= recipe.nazwa %></td>
-    <td><%= recipe.przepis %></td>
-    <td><%= recipe.skladniki %></td>
-    <td><%= recipe.cena %></td>
     <td><%= recipe.trudnosc %></td>
     <td><%= recipe.autor %></td>
     <td><%= recipe.tag_list %></td>
@@ -41,16 +39,12 @@ $(function(){
   </tr>
 <% end %>
 </table>
-<%= form_tag recipes_path, :method => :get, :remote => true do %>
-  <p>
-    <%= text_field_tag :search, params[:search] %>
-    <%= submit_tag "Search", :name => nil %>
-  </p>
-<% end %>
-<br />
-<ul id="tag-cloud">
-<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
-  <%= link_to tag.name, tags_recipes_path(:name=>tag.name), :class => css_class %>
-<% end %>
-</ul>
-<%= link_to 'New Recipe', new_recipe_path %>
+</div>
+</div>
+</div>
+	  <div id="footermainPan">
+  <div id="footerPan">
+		<p class="copyright">©c2h5oh. All Rights Reserved.</p>
+	
+  </div>
+</div>
