--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -1,61 +1,63 @@
-body { background-color: #fff; color: #333; }
+body{padding:0px; margin:0px; background:url(../images/main-bg.jpg) 0 0 repeat-x #fff; color:#6B6854; font:14px/18px "Trebuchet MS",Arial, Helvetica, sans-serif;}
 
-body, p, ol, ul, td {
-  font-family: verdana, arial, helvetica, sans-serif;
-  font-size:   13px;
-  line-height: 18px;
-}
+#container{width:778px; margin:0 auto;}
+/*----TOP PANEL----*/
+#topPan{width:778px; height:317px; background:url(images/header.jpg) 0 0 no-repeat #fff; color:#726503; position:relative;}
+#topPan img.logo{width:260px; height:56px; position:absolute; top:54px; left:34px;}
+#topPan ul{width:107px; height:126px; font-weight:bold; position:absolute; top:161px; left:136px; font-size:13px; line-height:24px;}
+#topPan ul li{width:107px; height:24px; border-bottom:1px dashed #AECA8D;}
+#topPan ul li a{width:82px; height:24px; display:block; background:url(images/arrow-normal.gif) 0 8px no-repeat #fff; color:#5E8402; line-height:24px; text-decoration:none; padding:0 0 0 25px;}
+#topPan ul li a:hover{background:url(images/arrow-hover.gif) 0 8px no-repeat #ECFFD5; color:#5E8402; text-decoration:none;}
+#topPan ul li.home{width:82px; height:24px; display:block; background:url(images/arrow-hover.gif) 0 8px no-repeat #ECFFD5; color:#5E8402; line-height:24px; text-decoration:none; padding:0 0 0 25px;}
+#topPan ul li.contact{width:107px; height:24px; border-bottom:none;}
 
-pre {
-  background-color: #eee;
-  padding: 10px;
-  font-size: 11px;
-}
+/*----/TOP PANEL----*/
+/*----BODY PANEL----*/
+#bodyPan{width:778px; position:relative; padding:40px 0 0; margin:0 auto;}
+#bodybgPan{width:710px; float:left; background:url(images/bodydot-line.gif) 0 0 repeat-y; padding:0 34px;}
+/*----BODY TOP PANEL----*/
+#bodytopPan{width:710px; height:247px; position:relative; margin:0 auto; padding:17px 0 0;}
+#bodytopPan h2{width:500px; height:70px; background:url(images/icon1.gif) 0 0 no-repeat #fff; color:#81C227; font:20px/70px "Trebuchet MS",Arial, Helvetica, sans-serif; padding:0 0 0 98px; }
 
-a { color: #000; }
-a:visited { color: #666; }
-a:hover { color: #fff; background-color:#000; }
+#bodytopPan p{padding:12px 0;}
+#bodytopPan p span.boldtext{font-weight:bold;}
+#bodytopPan p span.greentext{font-weight:bold; background:#fff; color:#619913;}
 
-div.field, div.actions {
-  margin-bottom: 10px;
-}
+#bodytopPan p.more{width:70px; height:18px; font-weight:bold; margin:0 0 0 630px; padding:0px;}
+#bodytopPan p.more a{width:70px; height:18px; display:block; background:#fff; color:#444130; text-decoration:none;}
+#bodytopPan p.more a:hover{background:#fff; color:#5E8402; text-decoration:none;}
+/*----/BODY TOP PANEL----*/
 
-#notice {
-  color: green;
-}
+/*----BODY MIDDLE PANEL----*/
+#bodymiddleMainPan{width:100%;  background:url(images/bodybg.gif) 0 0 repeat-x #F1FDDD; color:#5E8402; margin:80px 0 0 0; clear:both; padding:0 0 0 34px;}
 
-.field_with_errors {
-  padding: 2px;
-  background-color: red;
-  display: table;
-}
+#bodymiddleMainPan h2{height:55px; width:280px; background:url(images/icon2.gif) 0 1px no-repeat; text-transform:uppercase; font-size:20px; line-height:57px;  margin:0 auto;}
 
-#error_explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
-}
+/*----BODY PANEL----*/
 
-#error_explanation h2 {
-  text-align: left;
-  font-weight: bold;
-  padding: 5px 5px 5px 15px;
-  font-size: 12px;
-  margin: -7px;
-  margin-bottom: 0px;
-  background-color: #c00;
-  color: #fff;
-}
+/*----FOOTER PANEL----*/
+#footermainPan{height:135px; background:url(images/footerbg.jpg) 0 0 repeat-x #9CC149; color:#fff; position:relative; margin:0 auto; clear:both; padding:75px 0 0;}
 
-#error_explanation ul li {
-  font-size: 12px;
-  list-style: square;
-}
+#footerPan{width:700px; margin:0 auto;}
 
-.css1 { font-size: 1.0em; }
-.css2 { font-size: 1.2em; }
-.css3 { font-size: 1.4em; }
-.css4 { font-size: 1.6em; }
+#footerPan ul{width:375px; height:20px; padding:0; margin:0 auto;  list-style:none;}
+#footerPan li{float:left; }
+#footerPan ul li a{padding:0 10px 0; color:#fff; background:#7DA93E; text-decoration:none; font-size:12px;}
+#footerPan ul li a:hover{text-decoration:underline;}
+
+#footerPan p.copyright{width:204px; position:relative; margin:0 auto; background:#7FAA3E; color:#fff;  font-size:11px;}
+
+#footerPan ul.templateworld{width:250px; background:#85AE41; color:#fff; display:block; position:absolute; top:70px; left:260px; font-size:10px;}
+#footerPan ul.templateworld li{height:20px;}
+#footerPan ul.templateworld li a{background:#85AE41; display:block; color:#fff; text-decoration:none;}
+#footerPan ul.templateworld li a:hover{text-decoration:underline;}
+
+#footerPanhtml{width:64px; height:19px; display:block; position:absolute; background:#5E8402; color:#fff; border:1px solid #fff; top:45px; left:260px;}
+#footerPanhtml a{width:58px; height:17px; display:block; background:url(images/footer-arrow.gif) 100% 0  no-repeat #5E8402; border:1px solid #fff; color:#fff; font-size:11px; line-height:17px; font-weight:bold; text-decoration:none;text-transform:uppercase; padding:0 0 0 4px;}
+#footerPanhtml a:hover{background:url(images/footer-arrow-hover.gif) 100% 0  no-repeat #A7C204; color:#fff;}
+
+#footerPancss{width:64px; height:19px; display:block; position:absolute; top:45px; left:330px; border:1px solid #fff;}
+#footerPancss a{width:56px; height:17px; display:block; background:url(images/footer-arrow-hover.gif) 100% 0  no-repeat #A7C204;  border:1px solid #fff; color:#fff; font-size:11px; line-height:17px; font-weight:bold; text-decoration:none; text-transform:uppercase; padding:0 0 0 8px;}
+#footerPancss a:hover{background:url(images/footer-arrow.gif) 100% 0  no-repeat #5E8402; color:#fff; text-decoration:none;}
+
+td { text-align:center; width:200px;}
