--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,6 +1,17 @@
+<style type="text/css">
+#tag-cloud { position:relative; width:400px; margin:30px auto; height:100px;}
+</style>
+<script type="text/javascript" src="/javascripts/jquery.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.tagcloud.min.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.easing.1.3.js"></script>
+<script type="text/javascript">
+$(function(){
+	$("#tag-cloud").tagCloud({"direction":"vertical", "easein":"easeOutBack", "speed":2000});
+});
+</script>
 <div id="container">
 <div id="topPan">
-	<a href="index.html"><img src="images/logo.gif" title="Liqidity Graph" alt="Liqidity Graph" width="260" height="56" border="0" class="logo" /></a>
+	<img src="../images/logo.gif" title="Liqidity Graph" alt="Liqidity Graph" width="260" height="56" border="0" class="logo" />
 	<ul>
 		<li><%= link_to "Katalog", recipes_path %></li>
 		<li><%= link_to 'Dodaj', new_recipe_path %></li>
@@ -40,6 +51,11 @@ Naszą aplikacja przeznaczona jest dla miłośników oraz degustatorów, którzy
 <% end %>
 </table>
 </div>
+</div>
+<div id="tag-cloud">
+<% tag_cloud(@tags, %w(css1 css2 css3 css4)) do |tag, css_class| %>
+  <%= link_to tag.name, tags_recipes_path(:name=>tag.name), :class => css_class %>
+<% end %>
 </div>
 </div>
 	  <div id="footermainPan">
