--- a/app/views/comments/_form.html.erb
+++ b/app/views/comments/_form.html.erb
@@ -1,9 +1,8 @@
 <%= form_for [@recipe, @recipe.comments.build] do |f| %>
   <%= f.error_messages %>
   <p>
-    <%= f.label :author, "Author" %><br>
-    <%= f.text_field :author %>
+    <%= f.label :author, "Autor:" %><%= f.text_field :author %>
+	<span style="padding-left:10px"></span>Treść: <%= f.text_area :body, :rows => 1 %>
+	<%= f.submit 'Publikuj' %>
   </p>
-  <p><%= f.text_area :body, :rows => 4 %></p>
-  <p><%= f.submit %></p>
 <% end %>
