--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -27,7 +27,7 @@ $(function(){
 
 <div id="bodyPan">
 	<div id="bodytopPan">
-		<h2>Informacje o git-nalewki</h2>
+		<h2>Informacje o serwisie Git-nalewki</h2>
 		<p>Serwis realizowany w ramach projektu z Architektury Serwisów Internetowych</p>
 		<p>Git-nalewki umożliwia dzielenie się przepisami na wyszukane i wykwintne trunki zwane nalewkami, komentowanie i ocenianie przepisów innych użytkowników</p>
 Naszą aplikacja przeznaczona jest dla miłośników oraz degustatorów, którzy lubią mieć w swoim barku coś czego nie można dostać w sklepie i czym będą mogli poczęstować gości w czasie spotkań rodzinnych i towarzyskich</p>
