--- a/app/views/comments/new.html.erb
+++ b/app/views/comments/new.html.erb
@@ -1,3 +1,3 @@
-<% title "Nowy komentarz" %>
+﻿<% title "Nowy komentarz" %>
 <%= render 'form' %>
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Powrót', recipes_path %>
