--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing recipe</h1>
+﻿<h1>Popraw przepis</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @recipe %> |
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Pokaż', @recipe %> |
+<%= link_to 'Powrót', recipes_path %>
