--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,5 @@
-<h1>New recipe</h1>
+﻿<h1>Pochwal się swoją nalewką</h1>
 
 <%= render 'form' %>
 
-<%= link_to 'Back', recipes_path %>
+<%= link_to 'Powrót', recipes_path %>
