--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,2 +1,2 @@
 <p><span style="color:#FF0000; padding-left:5px;"><%= comment.author %></span> napisał <span style="color:#FF0000; padding-left:5px; font-weight:bold;">"<%= comment.body %>"</span> 
-<span style="padding-left:30px"><%= link_to "Usun komentarz", [comment.recipe, comment], :confirm => "Sure?", :method => :delete %></span><p>
+<span style="padding-left:30px"><%= link_to "Usun komentarz", [comment.recipe, comment], :confirm => "Na pewno?", :method => :delete %></span><p>
