--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,6 +4,7 @@
   <title>Nalewki</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag :defaults %>
+  <%= ajaxful_rating_style %>
   <%= csrf_meta_tag %>
 </head>
 <body>
