--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -7,6 +7,8 @@
 <%= image_tag @recipe.photo.url(:small) %>
 </p>
 
+Twoja ocena: <%= ratings_for @recipe, :dimension => :nazwa %>
+
 <p>
   <b>Cena:</b>
   <%= @recipe.cena %>
