--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -13,12 +13,9 @@ $(function(){
 
 <div id="bodyPan">
 	<div id="bodytopPan">
-		<p>
-		Niniejszy serwis  jest projektem realizowanym w ramach zajęć  z Architektury Serwisów Internetowych.  
-		Git-nalewki umożliwia dzielenie się przepisami na wyszukane i wykwintne trunki zwane nalewkami, komentowanie i ocenianie przepisów innych użytkowników
-		Nasza aplikacja przeznaczona jest dla miłośników oraz degustatorów, którzy lubią mieć w swoim barku coś czego nie można dostać w sklepie i czym będą mogli poczęstować gości w czasie spotkań rodzinnych i towarzyskich
-		Projekt realizuje grupa c2h50h (c2h5oh-Ruby / git-nalewki)
-		</p>
+		<p>Serwis realizowany w ramach projektu z Architektury Serwisów Internetowych</p>
+		<p>Git-nalewki umożliwia dzielenie się przepisami na wyszukane i wykwintne trunki zwane nalewkami, komentowanie i ocenianie przepisów innych użytkowników</p>
+<p>Naszą aplikacja przeznaczona jest dla miłośników oraz degustatorów, którzy lubią mieć w swoim barku coś czego nie można dostać w sklepie i czym będą mogli poczęstować gości w czasie spotkań rodzinnych i towarzyskich</p>
 	</div>
 	<% @recipes.each do |recipe| %>
 		<div class="recipe">
