--- a/app/views/recipes/index.js.erb
+++ b/app/views/recipes/index.js.erb
@@ -1,1 +1,1 @@
-$("#fortunes").html("<%= escape_javascript(render(@fortunes)) %>");
+$("#recipes").html("<%= escape_javascript(render(@recipes)) %>");
