--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -1,6 +1,204 @@
-﻿
-<% form_for @recipe, :html => { :multipart => true } do |f| %>
-  <% if @recipe.errors.any? %>
+﻿   <script language="javascript" type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+  <script type="text/javascript" src="/javascript/sliding.form.js"></script>
+  <style>
+ #wrapper{
+    -moz-box-shadow:0px 0px 3px #aaa;
+    -webkit-box-shadow:0px 0px 3px #aaa;
+    box-shadow:0px 0px 3px #aaa;
+    -moz-border-radius:10px;
+    -webkit-border-radius:10px;
+    border-radius:10px;
+    border:2px solid #fff;
+    background-color:#f9f9f9;
+    width:600px;
+    overflow:hidden;
+}
+#steps{
+    width:600px;
+	/*height:320px;*/
+    overflow:hidden;
+}
+.step{
+    float:left;
+    width:600px;
+	/*height:320px;*/
+}
+#navigation{
+    height:45px;
+    background-color:#e9e9e9;
+    border-top:1px solid #fff;
+    -moz-border-radius:0px 0px 10px 10px;
+    -webkit-border-bottom-left-radius:10px;
+    -webkit-border-bottom-right-radius:10px;
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+}
+#navigation ul{
+    list-style:none;
+	float:left;
+	margin-left:22px;
+}
+#navigation ul li{
+	float:left;
+    border-right:1px solid #ccc;
+    border-left:1px solid #ccc;
+    position:relative;
+	margin:0px 2px;
+}
+#navigation ul li a{
+    display:block;
+    height:45px;
+    background-color:#444;
+    color:#777;
+    outline:none;
+    font-weight:bold;
+    text-decoration:none;
+    line-height:45px;
+    padding:0px 20px;
+    border-right:1px solid #fff;
+    border-left:1px solid #fff;
+    background:#f0f0f0;
+    background:
+        -webkit-gradient(
+        linear,
+        left bottom,
+        left top,
+        color-stop(0.09, rgb(240,240,240)),
+        color-stop(0.55, rgb(227,227,227)),
+        color-stop(0.78, rgb(240,240,240))
+        );
+    background:
+        -moz-linear-gradient(
+        center bottom,
+        rgb(240,240,240) 9%,
+        rgb(227,227,227) 55%,
+        rgb(240,240,240) 78%
+        )
+}
+#navigation ul li a:hover,
+#navigation ul li.selected a{
+    background:#d8d8d8;
+    color:#666;
+    text-shadow:1px 1px 1px #fff;
+}
+span.checked{
+    background:transparent url(../images/checked.png) no-repeat top left;
+    position:absolute;
+    top:0px;
+    left:1px;
+    width:20px;
+    height:20px;
+}
+span.error{
+    background:transparent url(../images/error.png) no-repeat top left;
+    position:absolute;
+    top:0px;
+    left:1px;
+    width:20px;
+    height:20px;
+}
+#steps form fieldset{
+    border:none;
+    padding-bottom:20px;
+}
+#steps form legend{
+    text-align:left;
+    background-color:#f0f0f0;
+    color:#666;
+    font-size:24px;
+    text-shadow:1px 1px 1px #fff;
+    font-weight:bold;
+    float:left;
+    width:590px;
+    padding:5px 0px 5px 10px;
+    margin:10px 0px;
+    border-bottom:1px solid #fff;
+    border-top:1px solid #d9d9d9;
+}
+#steps form p{
+    float:left;
+    clear:both;
+    margin:0px 0px;
+    background-color:#f4f4f4;
+    border:1px solid #fff;
+    width:500px;
+    padding:10px;
+    margin-left: 10px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+    -moz-box-shadow:0px 0px 3px #aaa;
+    -webkit-box-shadow:0px 0px 3px #aaa;
+    box-shadow:0px 0px 3px #aaa;
+}
+#steps form p label{
+    width:160px;
+    float:left;
+    text-align:right;
+    margin-right:15px;
+    line-height:26px;
+    color:#666;
+    text-shadow:1px 1px 1px #fff;
+    font-weight:bold;
+}
+#steps form input:not([type=radio]),
+#steps form textarea,
+#steps form select{
+    background: #ffffff;
+    border: 1px solid #ddd;
+    -moz-border-radius: 3px;
+    -webkit-border-radius: 3px;
+    border-radius: 3px;
+    outline: none;
+    padding: 5px;
+    width: 200px;
+    float:left;
+}
+#steps form input:focus{
+    -moz-box-shadow:0px 0px 3px #aaa;
+    -webkit-box-shadow:0px 0px 3px #aaa;
+    box-shadow:0px 0px 3px #aaa;
+    background-color:#FFFEEF;
+}
+#steps form p.submit{
+    background:none;
+    border:none;
+    -moz-box-shadow:none;
+    -webkit-box-shadow:none;
+    box-shadow:none;
+}
+#steps #registerButton{
+	border:none;
+	outline:none;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+    border-radius: 10px;
+    color: #ffffff;
+    display: block;
+    cursor:pointer;
+    margin: 0px auto;
+    clear:both;
+    padding: 7px 25px;
+    text-shadow: 0 1px 1px #777;
+    font-weight:bold;
+    font-family:"Century Gothic", Helvetica, sans-serif;
+    font-size:22px;
+    -moz-box-shadow:0px 0px 3px #aaa;
+    -webkit-box-shadow:0px 0px 3px #aaa;
+    box-shadow:0px 0px 3px #aaa;
+    background:#4797ED;
+	width:400px;
+}
+#steps #registerButton:hover {
+    background:#d8d8d8;
+    color:#666;
+    text-shadow:1px 1px 1px #fff;
+}
+ </style>
+ <div id="wrapper">
+                <div id="steps">
+                    <%= form_for(@recipe, :html => {:multipart => true, :id => "formElem"}) do |f| %>
+<% if @recipe.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@recipe.errors.count, "error") %> prohibited this recipe from being saved:</h2>
 
@@ -11,44 +209,83 @@
       </ul>
     </div>
   <% end %>
-
-  <div class="field">
-    <%= f.label :nazwa %><br />
-    <%= f.text_field :nazwa %>
-  </div>
-  <div class="field">
-    <%= f.label :autor %><br />
-    <%= f.text_field :autor %>
-  </div>
-  <div class="field">
-    <%= f.label :cena %><br />
-    <%= f.text_field :cena %>
-  </div>
-   <div class="field">
-    <%= f.label :trudność %><br />
-    <%= f.text_field :trudnosc %>
-  </div>
-  <div class="field">
-    <%= f.label :składniki %><br />
-    <%= f.text_field :skladniki %>
-  </div>
-  <div class="field">
-    <%= f.label :przepis %><br />
-    <%= f.text_area :przepis %>
-  </div>
-  <div class="field">
-   <%= f.label :Tagi %><br />
-   <%= f.text_field :tag_list %>
-  </div>
-  <div class="field">
-   <%= f.file_field :photo %>
-  </div>
-  
-  
-
-  
-
-  <div class="actions">
-    <%= f.submit "Dodaj"%>
-  </div>
-<% end %>
+                        <fieldset class="step">
+                            <legend>Podstawowe</legend>
+                            <p>
+                                <label for="username">Nazwa</label>
+                                <%= f.text_field :nazwa %>
+                            </p>
+                            <p>
+                                <label for="email">Autor</label>
+                                <%= f.text_field :autor %>
+                            </p>
+                            <p>
+                                <label for="password">Tagi</label>
+                                <%= f.text_field :tag_list %>
+                            </p>
+                        </fieldset>
+                        <fieldset class="step">
+                            <legend>Składniki</legend>
+                            <p>
+                                <label for="name">Składniki</label>
+                                <%= f.text_field :skladniki, :size => 60 %>
+                            </p>
+     
+                        </fieldset>
+                        <fieldset class="step">
+                            <legend>Przepis</legend>
+                            							<p>
+                                <label for="name">Przepis</label><br>
+                               <%= f.text_area(:przepis, :cols => 51, :rows => 13 ) %>
+                            </p>
+                        </fieldset>
+                        <fieldset class="step">
+                            <legend>Inne</legend>
+                            <p>
+                                <label for="username">Cena</label>
+                                <%= f.text_field :cena %>
+                            </p>
+                            <p>
+                                <label for="trudnosc">Trudnosc</label>
+                                <%= f.text_field :trudnosc %>
+                            </p>
+                            						<p>
+                                <label for="photo">Zdjęcie</label>
+                                <%= f.file_field :photo %>
+                            </p>
+							<p></p>
+                        </fieldset>
+						<fieldset class="step"></fieldset>
+						<fieldset class="step">
+                            <legend>Dodaj</legend>
+	
+							<p>
+								Jeżeli prawidłowo wypelniłaś\eś wszystkie pola <br>Kliknij przycisk
+							</p>
+                            <p class="submit">
+                                <%= f.submit "Dodaj" , :id => "registerButton" %>
+                            </p>
+                        </fieldset>
+                    </form>
+                </div>
+                <div id="navigation" style="display:none;">
+                    <ul>
+                        <li class="selected">
+                            <a href="#">Podstawowe</a>
+                        </li>
+                        <li>
+                            <a href="#">Składniki</a>
+                        </li>
+                        <li>
+                            <a href="#">Przepis</a>
+                        </li>
+                        <li>
+                            <a href="#">Inne</a>
+                        </li>
+						<li>
+                            <a href="#">Dodaj</a>
+                        </li>
+                    </ul>
+                </div>
+				  <% end %>
+            </div>
