--- a/app/views/recipes/new.html.erb
+++ b/app/views/recipes/new.html.erb
@@ -1,5 +1,15 @@
-﻿<h1>Pochwal się swoją nalewką</h1>
-
+﻿<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js"></script>
+        <script type="text/javascript" src="/javascripts/sliding.form.js"></script>
+<div id="bodyPan">
+<h1 style="text-align:center; text-shadow: 1px 1px 1px; font-size:18px;">Pochwal się swoją nalewką</h1>
+<div style="width:600px; margin:0 auto;">
 <%= render 'form' %>
-
+</div>
 <%= link_to 'Powrót', recipes_path %>
+</div>
+</div>
+	  <div id="footermainPan">
+  <div id="footerPan">
+  <p class="copyright">©c2h5oh. All Rights Reserved.</p>
+  </div>
+</div>
