--- a/public/stylesheets/scaffold.css
+++ b/public/stylesheets/scaffold.css
@@ -30,6 +30,14 @@ height:100px;
 background:#f1fddd;
 }
 
+.recipe2
+{
+margin:10px auto;
+width:750px;
+margin-bottom:50px;
+background:#f1fddd;
+}
+
 .image
 {
 width: 100px;
@@ -55,6 +63,20 @@ float:left;
 margin:5px 10px;
 }
 
+.opis2
+{
+width:620px;
+height:150px;
+float:left;
+margin:5px 10px;
+}
+
+.opis2 h1
+{
+height:20px;
+margin:10px 0px;
+text-align:center;
+}
 
 .opis h1
 {
@@ -77,14 +99,7 @@ text-align:center;
 /*----BODY PANEL----*/
 
 /*----FOOTER PANEL----*/
-#footermainPan{height:135px; background:url(images/footerbg.jpg) 0 0 repeat-x #9CC149; color:#fff; position:relative; margin:0 auto; clear:both; padding:75px 0 0;}
-
-#footerPan{width:700px; margin:0 auto;}
-
-#footerPan ul{width:375px; height:20px; padding:0; margin:0 auto;  list-style:none;}
-#footerPan li{float:left; }
-#footerPan ul li a{padding:0 10px 0; color:#fff; background:#7DA93E; text-decoration:none; font-size:12px;}
-#footerPan ul li a:hover{text-decoration:underline;}
+#footermainPan{height:35px; background:url(images/footerbg.jpg) 0 0 repeat-x #9CC149; color:#fff; position:relative; margin:0 auto; clear:both; padding:75px 0 0;}
 
 #footerPan p.copyright{width:204px; position:relative; margin:0 auto; background:#7FAA3E; color:#fff;  font-size:11px;}
 
@@ -101,7 +116,53 @@ table {width:100%; margin:0px auto;}
 td { text-align:center;}
 tr {height:150px; background:#000000;}
 
-.css1 { font-size:10px; color: #000000; }
-.css2 { font-size:10px; color: #000000; }
-.css3 { font-size:10px; color: #000000; }
-.css4 { font-size:10px; color: #000000; }
+.css1 { font-size: 10px; }
+.css2 { font-size: 11px; }
+.css3 { font-size: 12px; }
+.css4 { font-size:  13px;}
+
+#tagi{
+margin-top:20px; 
+text-align: center;
+padding: 0.3em;
+}
+
+.flickr_pagination {
+margin-top:20px; 
+text-align: center;
+padding: 0.3em;
+}
+.flickr_pagination a, .flickr_pagination span { 
+padding: 0.2em 0.5em;
+
+}
+.flickr_pagination span.disabled { 
+color: #aaaaaa;
+}
+.flickr_pagination span.current { 
+font-weight: 700;
+color: #ff0084;
+}
+.flickr_pagination a { 
+border: 1px solid #dddddd;
+color: #0063dc;
+text-decoration: none;
+}
+.flickr_pagination a:hover, .flickr_pagination a:focus { 
+border-color: #003366;
+background: #0063dc;
+color: #ffffff;
+}
+.flickr_pagination .page_info { 
+color: #aaaaaa;
+padding-top: 0.8em;
+}
+.flickr_pagination .prev_page, .flickr_pagination .next_page { 
+border-width: 2px;
+}
+.flickr_pagination .prev_page { 
+margin-right: 1em;
+}
+.flickr_pagination .next_page { 
+margin-left: 1em;
+}
